--- a/src/Component/ActOne.css
+++ b/src/Component/ActOne.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: #ededed;
+  background-color: #479bbf;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -8,7 +8,7 @@
   margin: auto;
   width: 95%;
   height: 90vh;
-  box-shadow: -1px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   border-radius: 3px 3px 3px 3px;
   display: grid;
   grid-template-areas:
@@ -42,6 +42,7 @@
   font-weight: normal;
   font-size: 790%;
   line-height: 206px;
+  color: white;
 }
 .Desc-container p {
   font-family: Roboto Condensed;
@@ -49,6 +50,8 @@
   font-weight: normal;
   font-size: 263%;
   line-height: 52px;
+  margin-bottom: 5px;
+  color: white;
 }
 .Pic-container {
   /* margin-top: 22%; */
@@ -59,8 +62,7 @@
   width: 70vh;
 }
 .Desc-container button {
-  background: rgb(42 121 243 / 88%);
-  border-radius: 16px;
+  background: #035f87;
   width: 613px;
   height: 71px;
   text-align: center;
@@ -70,11 +72,13 @@
   font-size: 39px;
   cursor: pointer;
   color: #ffffff;
-  transition: 250ms;
+  transition: background-color 0.2s liear;
 }
 .Desc-container button:hover {
-  color: rgb(163 175 195);
-  background-color: rgb(118 54 245 / 83%);
+  background-color: #15a7e6;
+}
+.Desc-container button:focus {
+  outline-offset: green 2px solid;
 }
 .Arrow-down img {
   cursor: pointer;
