--- a/src/Component/ActTwo.css
+++ b/src/Component/ActTwo.css
@@ -2,12 +2,30 @@
   position: relative;
   width: 95%;
   height: 90%;
-  background-color: white;
-  box-shadow: -1px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: #5792ab;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   border-radius: 3px 3px 3px 3px;
   margin: auto;
-  display: flex;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 150px auto;
 }
+.Services-title h1 {
+  font-family: Saira Condensed;
+  color: white;
+  text-align: center;
+  font-size: 4.2rem;
+  margin-top: 10px;
+}
+.Services-body {
+  display: grid;
+  margin: 0 12px 12px 12px;
+  grid-gap: 10px;
+  grid-template-areas:
+    "A B C"
+    "E F G";
+}
+
 .service-desc {
   background-color: #f6f6f6;
   width: 30%;
