--- a/src/Component/ActThree.css
+++ b/src/Component/ActThree.css
@@ -1,14 +1,15 @@
 .contact-container {
   position: relative;
-  width: 95%;
+  width: 75%;
   height: 90%;
-  background-color: #15a7e6;
+  background-color: #5792ab;
 
   background-size: contain;
   background-repeat: no-repeat;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   border-radius: 3px 3px 3px 3px;
   margin: auto;
+  border: 4px solid #15a7e6;
 }
 .img {
   background-image: url("http://localhost:3000/pic/bg2.jpg");
@@ -16,36 +17,78 @@
   background-repeat: no-repeat;
 }
 .contact-body {
-  background-color: #00000073;
-  display: block;
-  width: 70%;
-  height: 100%;
-  margin: auto;
+}
+.contact-body p {
+  color: #ededed;
+  text-align: center;
+  font-family: sans serif;
+  font-size: 20px;
 }
 .contact-body h1 {
   font-family: Saira Condensed;
-  text-decoration: underline;
-  text-underline-position: under;
-  color: white;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 400%;
   text-align: center;
+
+  color: #ededed;
 }
 .contact-form {
   display: grid;
   justify-content: center;
   grid-gap: 5px;
 }
-.contact-form input {
+.contact-form input[type="text"],
+input[type="email"] {
   font-size: 20px;
   padding: 10px;
   margin-top: 20px;
-}
-.contact-form input[type="submit"] {
-  cursor: pointer;
-  border: none;
-  background-color: #479bbf;
+  width: 30vw;
+  background-color: transparent;
   color: white;
-  font-size: 20px;
+  border-color: transparent;
+  border-bottom: 1px solid #035f87;
+  outline: none;
+  transition: 0.2s linear;
 }
+
+.contact-form input::placeholder {
+  color: #035f87;
+}
+.contact-form input:focus {
+  border-bottom: 1px solid #52c6f8;
+}
+textarea {
+  background-color: transparent;
+  color: white;
+  outline: none;
+  border: 1px solid #035f87;
+  transition: 0.2s linear;
+  font-family: "Courier New", Courier, monospace;
+}
+textarea:focus {
+  border: 4px solid #15a7e6;
+}
+textarea::placeholder {
+  color: #035f87;
+}
+.contact-form button {
+  margin-top: 10px;
+  width: 10vw;
+  margin: auto;
+  font-family: Saira Condensed;
+  color: white;
+  background-color: transparent;
+  outline: none;
+  border: 3px solid white;
+  font-size: 25px;
+  cursor: pointer;
+  transition: 0.2s linear;
+}
+.contact-form button:hover {
+  border: 3px solid #15a7e6;
+}
+
 .hands {
   display: block;
   margin: auto;
